--- a/composer.json
+++ b/composer.json
@@ -8,25 +8,27 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "ext-gd": "*",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "geoip2/geoip2": "~2.0",
-        "gregwar/captcha": "^1.1",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5",
-        "laravelchen/laravel-editormd": "^2.5",
-        "wjcms/laravel-markdown-editor": "^1.1"
+      "php": "^7.3|^8.0",
+      "ext-gd": "*",
+      "fideloper/proxy": "^4.4",
+      "fruitcake/laravel-cors": "^2.0",
+      "geoip2/geoip2": "~2.0",
+      "gregwar/captcha": "^1.1",
+      "guzzlehttp/guzzle": "^7.0.1",
+      "laravel/framework": "^8.12",
+      "laravel/tinker": "^2.5",
+      "laravelchen/laravel-editormd": "^2.5",
+      "snapappointments/bootstrap-select": "^1.13",
+      "wjcms/laravel-markdown-editor": "^1.1"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+      "facade/ignition": "^2.5",
+      "fakerphp/faker": "^1.9.1",
+      "laravel/sail": "^1.0.1",
+      "laravel/ui": "3.0",
+      "mockery/mockery": "^1.4.2",
+      "nunomaduro/collision": "^5.0",
+      "phpunit/phpunit": "^9.3.3"
     },
     "config": {
         "optimize-autoloader": true,
